update change background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li id="button-scene4">Space</li>
         </ul>
     </div>
-    <section id="scene1">  
+    <section id="scene">  
         <audio id="shortgun-sound" src="shortgun.mp3" autostart="false"></audio>
     </section>
     <script src="main.js"></script>
