--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -22,6 +24,19 @@
             <li id="button-scene4">Space</li>
         </ul>
     </div>
+
+    <div class="setting">
+        <button id="button-setting">
+            <div class="fa fa-cog"></div>
+        </button>
+        <div id="drop-down" class="drop-down">
+            <div id="undo" class="fa fa-undo"></div>
+            <div id="volume" class="fa fa-volume-down"></div>
+            <div id="exit" class="fa fa-power-off"></div>
+        </div>
+    </div>
+    
+
     <section id="scene">  
         <audio id="shortgun-sound" src="shortgun.mp3" autostart="false"></audio>
     </section>
