--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="menu-bg" class="menu-bg">
         <h2>Choose the scene</h2><hr>
         <ul>
-            <li id="button-scene1">Midnight</li>
-            <li id="button-scene2">Forest</li>
+            <li id="button-scene1">Night</li>
+            <li id="button-scene2">Foggy</li>
             <li id="button-scene3">Snow</li>
             <li id="button-scene4">Space</li>
         </ul>
